--- a/src/navegacion.css
+++ b/src/navegacion.css
@@ -2,7 +2,7 @@
     background-color: black;
     color: white;
     text-align: center;
-    padding: 1rem;
+    padding: 0.8rem;
     margin: 0;
 }
 
@@ -10,10 +10,40 @@
     max-width: 70rem;
     background-color: black;
     color: white;
+    margin: 0 auto;
+    border-radius: 2rem;
     text-align: center;
+    box-shadow: 20px 20px 20px rgb(26, 90, 228)
+
 }
 
-.formulario{
+.label{
     display: flex;
-    gap: 3rem;
+    flex-direction: row;
+    gap: 4rem;
+    margin: 0 auto;
+    padding: 1rem;
+    align-items: center;
+
+ }
+
+ 
+.input{
+    background-color: wheat;
+    border-radius: 5px;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
 }
+
+.button{
+    border: none;
+    border-radius: 3rem;
+    background-color: wheat;
+    color: black;
+    font-size: 1.1rem;
+    font-weight: 900;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+}
+
+
