--- a/src/navegacion.css
+++ b/src/navegacion.css
@@ -1,3 +1,4 @@
+
 .header {
     background-color: black;
     color: white;
@@ -15,6 +16,14 @@
     text-align: center;
     box-shadow: 20px 20px 20px rgb(26, 90, 228)
 
+}
+.section-productos{
+    max-width: 70rem;
+    background-color: black;
+    color: white;
+    margin: 0 auto;
+    border-radius: 2rem;
+    text-align: center;
 }
 
 .label{
