--- a/src/navegacion.css
+++ b/src/navegacion.css
@@ -20,8 +20,10 @@
 .section-productos{
     max-width: 70rem;
     background-color: black;
+    box-shadow: 20px 20px 20px rgb(25, 0, 255);
     color: white;
     margin: 0 auto;
+    margin-top: 5rem;
     border-radius: 2rem;
     text-align: center;
 }
@@ -55,4 +57,48 @@
     padding: 0.5rem 1rem;
 }
 
+.lista-productos{
+    font-size:1rem;
+    font-weight: 900;
+    text-align: left;
+    margin:0 2rem;
+    padding: 0.3rem;
+    text-transform: uppercase;
+}
 
+.amarillo{
+    background-color: yellow;
+    color:black;
+    padding:1rem;
+    border-radius: 0.5rem;
+}
+.azul{
+    background-color: blue;
+    color:black;
+    padding:1rem;
+    border-radius: 0.5rem;
+}
+
+.boton-eliminar{
+    background-color: rgb(231, 0, 0);
+    font-size: 1rem;
+    color:white;
+    border:none;
+    padding: 0.5rem;
+    margin-left: 2rem;
+    font-weight: 900;
+    border-radius: 0.5rem;
+    cursor: pointer;
+}
+
+.error{
+    background-color: rgb(231, 0, 0);
+    display: inline-block;
+    text-transform: uppercase;
+    padding:1rem 0.5rem;
+    color: black;
+    font-size: 1.2rem;
+    font-weight: 500;
+    border-radius: 0.5rem;
+    margin-top: 10px;
+}
